# aristotlebot-slack

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
reports/: ari-10-deployment-investigation.md  ari-11-redeploy-report.md  ari-12-message-processing-check.md  ari-13-redeploy-report.md  ari-14-runaway-worker-loop-investigation.md  ari-3-mathlib-init-lean.md  ari-8-repo-summary.md
src/aristotlebot/: __init__.py  __main__.py  app.py  handlers.py  health.py  healthcheck.py  lean_imports.py  playground.py  utils.py
tests/: test_app.py  test_ari14_investigation.py  test_ari3_fetch_mathlib_init.py  test_bot_filtering.py  test_deployment.py  test_handlers.py  test_health.py  test_healthcheck.py  test_lean_imports.py  test_playground.py  test_utils.py
